se cambio la ruta y el controlador factura por historial y en la base de datos igual a  los porcedimientos ya no son factura sino historial, se volvio a crear el swagger y se volvio a construir el dist con los cambio ya hechos en la carpeta raiz APP
